--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 MONGO_URI=mongodb://127.0.0.1:27017/safesphere
 GOOGLE_CLIENT_ID=your_google_client_id
-GOOGLE_CLIENT_SECRET=your_google_secret
+GOOGLE_CLIENT_SECRET=your_google_client_secret
 GITHUB_CLIENT_ID=your_github_client_id
-GITHUB_CLIENT_SECRET=your_github_secret
+GITHUB_CLIENT_SECRET=your_github_client_secret
+SERVER_URL=http://localhost:8080
+CLIENT_URL=http://localhost:8080
